[CMake:OpenMP]Fix CMake OpenMP Linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -463,14 +463,14 @@ if (NOT APPLE)
           set(OpenMP_C_FLAGS "/openmp ${OpenMP_C_FLAGS}")
           set(OpenMP_CXX_FLAGS "/openmp ${OpenMP_CXX_FLAGS}")
       endif()
-      FOREACH(TARGET ${MNN_TARGETS})
-       target_link_libraries(${TARGET} OpenMP::OpenMP_CXX)
-       IF(WIN32)
-            target_compile_options(${TARGET} PUBLIC /openmp ${OpenMP_CXX_FLAGS} ${OpenMP_C_FLAGS})
-       ELSE()
-           target_compile_options(${TARGET} PUBLIC ${OpenMP_CXX_FLAGS} ${OpenMP_C_FLAGS})
-       ENDIF()
-     ENDFOREACH()
+      FOREACH(TARGET ${MNN_DEPS})
+      target_link_libraries(${TARGET} PUBLIC ${OpenMP_CXX_LIBRARIES})
+      IF(WIN32)
+           target_compile_options(${TARGET} PUBLIC /openmp ${OpenMP_CXX_FLAGS} ${OpenMP_C_FLAGS})
+      ELSE()
+          target_compile_options(${TARGET} PUBLIC ${OpenMP_CXX_FLAGS} ${OpenMP_C_FLAGS})
+      ENDIF()
+    ENDFOREACH()
     endif()
 endif()
 list(APPEND MNN_TARGETS MNN)
