--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,12 @@
 IF(MNN_BUILD_TEST)
-  file(GLOB_RECURSE Files ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.mm)
-  add_executable(run_test.out ${Files})
+  file(GLOB_RECURSE MNN_TEST_CPP_SOURCES ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
+  file(GLOB_RECURSE MNN_TEST_OBJC_SOURCES ${CMAKE_CURRENT_LIST_DIR}/*.mm)
+  set(MNN_TEST_SRCS "")
+  LIST(APPEND MNN_TEST_SRCS ${MNN_TEST_CPP_SOURCES})
+  IF(APPLE)
+    LIST(APPEND MNN_TEST_SRCS ${MNN_TEST_OBJC_SOURCES})
+  ENDIF()
+  add_executable(run_test.out ${MNN_TEST_SRCS})
   target_link_libraries(run_test.out ${MNN_DEPS})
   target_include_directories(run_test.out PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
   add_dependencies(run_test.out MNN_SCHEMA_GEN)
@@ -9,6 +15,6 @@ IF(MNN_BUILD_TEST)
       target_link_libraries(run_test.out ${FOUNDATION})
   endif()
   IF(WIN32 OR MSVC)
-    target_compile_options(run_test.out PRIVATE /wd4244 /wd4267 /wd4305 /wd4251 /wd4065)
+    target_compile_options(run_test.out PRIVATE /wd4244 /wd4267 /wd4305 /wd4251)
   ENDIF()
 ENDIF()
