--- a/source/backend/opencl/CMakeLists.txt
+++ b/source/backend/opencl/CMakeLists.txt
@@ -6,7 +6,7 @@ add_custom_command(OUTPUT "${CMAKE_CURRENT_LIST_DIR}/execution/cl/opencl_program
     COMMENT "OpenCL Code Generation"
 )
 add_custom_target (MNN_CLCodeGen DEPENDS "${CMAKE_CURRENT_LIST_DIR}/execution/cl/opencl_program.cc")
-file(GLOB_RECURSE MNN_OpenCL_SRC ${CMAKE_CURRENT_LIST_DIR}/*.cc ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
+file(GLOB_RECURSE MNN_OpenCL_SRC ${CMAKE_CURRENT_LIST_DIR}/*)
 if (${CMAKE_SYSTEM_NAME} MATCHES "Android")
     add_definitions(-DMNN_USE_OPENCL_WRAPPER)
     add_definitions(-DCL_HPP_TARGET_OPENCL_VERSION=110)
