--- a/source/backend/cpu/x86_x64/CMakeLists.txt
+++ b/source/backend/cpu/x86_x64/CMakeLists.txt
@@ -1,8 +1,8 @@
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)|(i686)")
     if (APPLE)
         add_definitions(-fno-stack-check) # Workaround a Xcode 11.X bug
-        add_definitions(-DMNN_OPTIMIZE_INT8_SSE)
     endif()
+    option(MNN_OPTIMIZE_INT8_SSE "use sse to compute int8" OFF)
     message(STATUS "${CMAKE_SYSTEM_PROCESSOR}: Open SSE")
     add_definitions(-DMNN_USE_SSE)
     FILE(GLOB MNN_X8664_SRC ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
@@ -16,6 +16,10 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)
         target_compile_options(MNNAVX PRIVATE /arch:AVX /wd4267)
     else()
         target_compile_options(MNNAVX PRIVATE -mavx)
+    endif()
+    if (MNN_OPTIMIZE_INT8_SSE)
+        target_compile_options(MNNX8664 PRIVATE -DMNN_OPTIMIZE_INT8_SSE)
+        target_compile_options(MNNAVX PRIVATE -DMNN_OPTIMIZE_INT8_SSE)
     endif()
     list(APPEND MNN_OBJECTS_TO_LINK $<TARGET_OBJECTS:MNNX8664> $<TARGET_OBJECTS:MNNAVX> $<TARGET_OBJECTS:MNNSSE>)
 endif()
