[PATCH 067/160] [Vulkan:Bugfix] Fix compile bug for gcc don't link dl default

--- a/source/backend/vulkan/CMakeLists.txt
+++ b/source/backend/vulkan/CMakeLists.txt
@@ -20,6 +20,8 @@ IF(MNN_SEP_BUILD)
     target_link_libraries(MNN_Vulkan MNN)
     if (MNN_USE_SYSTEM_LIB)
         target_link_libraries(MNN_Vulkan ${Vulkan_LIBRARY})
+    else()
+        target_link_libraries(MNN_Vulkan dl)
     endif()
 ELSE()
     add_library(
