fix complier error on ubuntu 18.04

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,9 @@
 IF(MNN_BUILD_TEST)
-  file(GLOB_RECURSE Files ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.mm)
+  if(APPLE)
+    file(GLOB_RECURSE Files ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.mm)
+  else()
+    file(GLOB_RECURSE Files ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
+  endif()
   add_executable(run_test.out ${Files})
   target_link_libraries(run_test.out ${MNN_DEPS})
   target_include_directories(run_test.out PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
