--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,6 @@ project(MNN VERSION ${MNN_VERSION_MAJOR}.${MNN_VERSION_MINOR}.${MNN_VERSION_PATC
 # complier options
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_MODULE_PATH
   ${CMAKE_MODULE_PATH}
   "${CMAKE_CURRENT_LIST_DIR}/cmake"
@@ -181,6 +180,30 @@ if(CMAKE_SYSTEM_NAME MATCHES "^Android")
     add_definitions(-DMNN_BUILD_FOR_ANDROID)
     if(CMAKE_SYSTEM_PROCESSOR MATCHES "^arm")
         add_definitions(-mfloat-abi=softfp -mfpu=neon)
+    endif()
+endif()
+option(MNN_USE_CPP11 "Enable MNN use c++11" ON)
+if (NOT MSVC)
+    if(MNN_USE_CPP11)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    else()
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+    endif()
+endif()
+
+if(CMAKE_SYSTEM_NAME MATCHES "^Linux")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__STRICT_ANSI__")
+    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+      # This is to workaround libgcc.a
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+    endif()
+    if(CMAKE_SYSTEM_PROCESSOR MATCHES "^armv7")
+        add_definitions(-mfpu=neon)	#please define in project/cross-compile/arm.toolchain.cmake
+    endif()
+    if(MNN_BUILD_HARD)
+        add_definitions(-mfloat-abi=hard)  #better define in project/cross-compile/arm.toolchain.cmake
     endif()
 endif()
 
