[PATCH 142/160] fix build static library bug

--- a/tools/converter/CMakeLists.txt
+++ b/tools/converter/CMakeLists.txt
@@ -41,19 +41,20 @@ IF(MNN_BUILD_CONVERTER)
   ELSE()
     add_library(MNNConvertDeps STATIC ${COMMON_SRC} ${MNN_CONVERTER_BACKENDS_OBJECTS} ${CMAKE_SOURCE_DIR}/3rd_party/flatbuffers/src/util.cpp)
   ENDIF()
-  target_link_libraries(MNNConvertDeps PUBLIC ${MNN_DEPS} ${Protobuf_LIBRARIES})
+  
+  target_link_libraries(MNNConvertDeps PUBLIC ${Protobuf_LIBRARIES})
   IF(NOT MNN_BUILD_SHARED_LIBS)
     if(APPLE)
-        target_link_libraries(MNNConvert -Wl,-all_load MNNConvertDeps -Wl,-noall_load)
+        target_link_libraries(MNNConvert -Wl,-all_load MNNConvertDeps ${MNN_DEPS} -Wl,-noall_load)
     elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-        target_link_libraries(MNNConvert -Wl,--whole-archive MNNConvertDeps -Wl,--no-whole-archive)
+        target_link_libraries(MNNConvert -Wl,--whole-archive MNNConvertDeps ${MNN_DEPS} -Wl,--no-whole-archive)
     ELSE()
-        target_link_libraries(MNNConvert MNNConvertDeps)
+        target_link_libraries(MNNConvert MNNConvertDeps ${MNN_DEPS})
     endif()
   ELSE()
     add_executable(TestConvertResult ${CMAKE_CURRENT_LIST_DIR}/source/TestConvertResult.cpp)
-    target_link_libraries(TestConvertResult MNNConvertDeps)
-    target_link_libraries(MNNConvert MNNConvertDeps)
+    target_link_libraries(TestConvertResult MNNConvertDeps ${MNN_DEPS})
+    target_link_libraries(MNNConvert MNNConvertDeps ${MNN_DEPS})
   ENDIF()
   add_dependencies(MNNConvert MNN_SCHEMA_GEN)
 ENDIF()
