[PATCH 147/160] [Vulkan:Bugfix] Add config for high precision because adreno don't support

--- a/source/backend/vulkan/CMakeLists.txt
+++ b/source/backend/vulkan/CMakeLists.txt
@@ -1,6 +1,10 @@
 FILE(GLOB_RECURSE MNN_Vulkan_SRC ${CMAKE_CURRENT_LIST_DIR}/*)
 option(MNN_VULKAN_REGEN "Regenerate Vulkan Shader binaries. Requires FULL glslang suite with spirv-tools linked" OFF)
 include_directories("./")
+option(MNN_VULKAN_SUPPORT_COMPABILITY "Support high precision for Vulkan" OFF)
+if (MNN_VULKAN_SUPPORT_COMPABILITY)
+    add_definitions(-DMNN_VULKAN_SUPPORT_COMPABILITY)
+endif()
 if(MNN_USE_SYSTEM_LIB)
     find_package(Vulkan REQUIRED)
     set(MNN_VULKAN_LIBS ${Vulkan_LIBRARIES} PARENT_SCOPE)
