--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ ENDIF()
 
 include(${CMAKE_CURRENT_LIST_DIR}/cmake/macros.cmake)
 
-IF(NOT MNN_BUILD_SHARED_LIBS)
+IF(NOT APPLE AND NOT MNN_BUILD_SHARED_LIBS)
   SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
   SET(MNN_SEP_BUILD OFF)
   IF(MNN_BUILD_CONVERTER)
