[MNN:Sync] Sync internal git for remain patch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,6 +159,7 @@ message(STATUS "\tMetal: ${MNN_METAL}")
 message(STATUS "\tOpenCL: ${MNN_OPENCL}")
 message(STATUS "\tOpenGL: ${MNN_OPENGL}")
 message(STATUS "\tVulkan: ${MNN_VULKAN}")
+message(STATUS "\tARM82: ${MNN_ARM82}")
 message(STATUS "\tOpenMP: ${MNN_OPENMP}")
 message(STATUS "\tHidden: ${MNN_HIDDEN}")
 message(STATUS "\tBuild Path: ${CMAKE_CURRENT_BINARY_DIR}")
@@ -397,6 +398,7 @@ ENDIF()
 
 # ARM82 Assemblies
 IF(MNN_ARM82)
+  add_definitions(-DENABLE_ARMV82)
   add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/source/backend/arm82/)
   IF(MNN_SEP_BUILD)
     list(APPEND MNN_DEPS MNN_Arm82)
