[PATCH 15/28] flatbuffer fix, unicode model filepath support, TensorUtils.hpp macro conflict fix, cmake cache option force update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,20 +69,24 @@ option(MNN_AAPL_FMWK "Build MNN.framework instead of traditional .a/.dylib" OFF)
 set(MNN_SCHEMA_SUFFIX "private" CACHE STRING "MNN Schema Source Path Suffix")
 IF(APPLE AND MNN_AAPL_FMWK AND MNN_SEP_BUILD)
   message(WARNING "MNN_SEP_BUILD AND MNN_AAPL_FMWK can't coexist. Turning off MNN_SEP_BUILD")
-  SET(MNN_SEP_BUILD OFF)
+  SET(MNN_SEP_BUILD OFF CACHE BOOL "<docstring>" FORCE)
 ENDIF()
-IF((MSVC OR WIN32) AND MNN_SEP_BUILD)
-  message(WARNING "MNN_SEP_BUILD IS TROUBLESOME ON Windows. Forcing OFF...")
-  SET(MNN_SEP_BUILD OFF)
+IF(MSVC OR WIN32)
+  IF(MNN_SEP_BUILD)
+    message(WARNING "MNN_SEP_BUILD IS TROUBLESOME ON Windows. Forcing OFF...")
+    SET(MNN_SEP_BUILD OFF CACHE BOOL "<docstring>" FORCE)
+  ENDIF()
+  SET(MNN_USE_SYSTEM_LIB ON CACHE BOOL "<docstring>" FORCE)
+  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi")
 ENDIF()
 
 include(${CMAKE_CURRENT_LIST_DIR}/cmake/macros.cmake)
 
 IF(NOT APPLE AND NOT MNN_BUILD_SHARED_LIBS)
   SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
-  SET(MNN_SEP_BUILD OFF)
+  SET(MNN_SEP_BUILD OFF CACHE BOOL "<docstring>" FORCE)
   IF(MNN_BUILD_CONVERTER)
-    SET(MNN_PORTABLE_BUILD ON)
+    SET(MNN_PORTABLE_BUILD ON CACHE BOOL "<docstring>" FORCE)
   ENDIF()
 ENDIF()
 
@@ -358,7 +362,6 @@ endif()
 include(${CMAKE_CURRENT_LIST_DIR}/source/backend/metal/CMakeLists.txt)
 set(MNN_DEPS "")
 set(MNN_EXTRA_DEPENDS "")
-list(APPEND MNN_DEPS MNN)
 # Vulkan
 IF(MNN_VULKAN)
   add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/source/backend/vulkan/)
@@ -432,6 +435,8 @@ ELSE()
     target_compile_definitions(MNN INTERFACE "-DUSING_MNN_DLL")
   endif()
 ENDIF()
+
+list(APPEND MNN_DEPS MNN)
 
 if(APPLE)
     IF(MNN_AAPL_FMWK)
