[PATCH 18/28] close compile sdot default

--- a/source/backend/cpu/arm/CMakeLists.txt
+++ b/source/backend/cpu/arm/CMakeLists.txt
@@ -4,8 +4,11 @@ ENDIF()
 FILE(GLOB MNN_AArch32_SRC ${CMAKE_CURRENT_LIST_DIR}/arm32/*.s ${CMAKE_CURRENT_LIST_DIR}/arm32/*.S)
 FILE(GLOB MNN_AArch64_SRC ${CMAKE_CURRENT_LIST_DIR}/arm64/*.s ${CMAKE_CURRENT_LIST_DIR}/arm64/*.S)
 
-# default to be ON
-SET(MNN_ARMV82_EXTENSION ON)
+# default to be OFF
+SET(MNN_ARMV82_EXTENSION OFF)
+if(MNN_ARM82)
+    SET(MNN_ARMV82_EXTENSION ON)
+endif()
 # remove the armv82 extension assemblies file
 if(NOT MNN_ARMV82_EXTENSION)
     list(REMOVE_ITEM MNN_AArch64_SRC ${CMAKE_CURRENT_LIST_DIR}/arm64/MNNGemmInt8AddBiasScale_ARMV82_Unit.S)
