--- a/source/backend/cpu/x86_x64/CMakeLists.txt
+++ b/source/backend/cpu/x86_x64/CMakeLists.txt
@@ -15,7 +15,8 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)
     if(WIN32 OR MSVC)
         target_compile_options(MNNAVX PRIVATE /arch:AVX /wd4267)
     else()
-        target_compile_options(MNNAVX PRIVATE -mavx)
+        target_compile_options(MNNAVX PRIVATE -mavx -mfma)
+        target_compile_options(MNNSSE PRIVATE -mfma)
     endif()
     if (MNN_OPTIMIZE_INT8_SSE)
         target_compile_options(MNNX8664 PRIVATE -DMNN_OPTIMIZE_INT8_SSE)
