[PATCH 10/17] [MNN:Feature] Support not build tools

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ option(MNN_OPENMP "Enable Multiple Thread Linux|Android" ON)
 option(MNN_USE_THREAD_POOL "Use Multiple Thread by Self ThreadPool" ON)
 option(MNN_BUILD_TRAIN "Build Train Tools" OFF)
 option(MNN_BUILD_DEMO "Build demo/exec or not" OFF)
+option(MNN_BUILD_TOOLS "Build tools/cpp or not" ON)
 option(MNN_BUILD_QUANTOOLS "Build Quantized Tools or not" OFF)
 option(MNN_EVALUATION "Build Evaluation Tools or not" OFF)
 option(MNN_BUILD_CONVERTER "Build Converter" OFF)
@@ -524,15 +525,27 @@ list(APPEND MNN_TARGETS MNN)
     endif()
   ENDFOREACH()
 list(REMOVE_ITEM MNN_TARGETS MNN)
+IF(MNN_BUILD_DEMO)
 include(${CMAKE_CURRENT_LIST_DIR}/demo/exec/CMakeLists.txt)
+ENDIF()
+IF(MNN_BUILD_TOOLS)
 include(${CMAKE_CURRENT_LIST_DIR}/tools/cpp/CMakeLists.txt)
+ENDIF()
 IF (MNN_BUILD_TRAIN)
   add_subdirectory(tools/train)
 ENDIF()
+IF(MNN_BUILD_TEST)
 include(${CMAKE_CURRENT_LIST_DIR}/test/CMakeLists.txt)
+ENDIF()
+IF(MNN_BUILD_BENCHMARK)
 include(${CMAKE_CURRENT_LIST_DIR}/benchmark/CMakeLists.txt)
+ENDIF()
+IF(MNN_BUILD_QUANTOOLS)
 include(${CMAKE_CURRENT_LIST_DIR}/tools/quantization/CMakeLists.txt)
+ENDIF()
+IF(MNN_EVALUATION)
 include(${CMAKE_CURRENT_LIST_DIR}/tools/evaluation/CMakeLists.txt)
+ENDIF()
 
 # Install headers
 IF(CMAKE_SYSTEM_NAME MATCHES "^Android" AND NOT MNN_BUILD_FOR_ANDROID_COMMAND)
