[MNN:Sync] Fix compile bug for windows, fix bug for device not support fma

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ option(MNN_SEP_BUILD "Build MNN Backends and expression seperately. Only works w
 option(NATIVE_LIBRARY_OUTPUT "Native Library Path" OFF)
 option(NATIVE_INCLUDE_OUTPUT "Native Include Path" OFF)
 option(MNN_AAPL_FMWK "Build MNN.framework instead of traditional .a/.dylib" OFF)
+option(MNN_FMA_ENABLE "x86 routine use fma extension" OFF)
 option(MNN_WITH_PLUGIN "Build with plugin op support." OFF)
 
 IF(APPLE AND MNN_AAPL_FMWK AND MNN_SEP_BUILD)
@@ -79,12 +80,15 @@ IF(MSVC OR WIN32)
     SET(MNN_SEP_BUILD OFF CACHE BOOL "<docstring>" FORCE)
   ENDIF()
   SET(MNN_USE_SYSTEM_LIB ON CACHE BOOL "<docstring>" FORCE)
+  SET(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG /OPT:REF /OPT:ICF")
+  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4267 /wd4018 /wd4251 /wd4996 /wd4244 /wd4146 /wd4129 /wd4305 /wd4275")
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4267 /wd4018 /wd4251 /wd4996 /wd4244 /wd4146 /wd4129 /wd4305 /wd4275")
   SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi")
 ENDIF()
 
 include(${CMAKE_CURRENT_LIST_DIR}/cmake/macros.cmake)
 
-IF(NOT APPLE AND NOT MNN_BUILD_SHARED_LIBS)
+IF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND NOT MNN_BUILD_SHARED_LIBS AND NOT (MSVC OR WIN32))
   SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
   SET(MNN_SEP_BUILD OFF CACHE BOOL "<docstring>" FORCE)
   IF(MNN_BUILD_CONVERTER)
@@ -414,19 +418,22 @@ ELSE()
   list(APPEND MNN_TARGETS MNNExpress)
   IF(MNN_BUILD_SHARED_LIBS)
     add_library(MNN SHARED ${CMAKE_CURRENT_LIST_DIR}/cmake/dummy.cpp ${MNN_OBJECTS_TO_LINK} ${MNN_PUB_HDRS} ${MNN_EXPR_PUB_HDRS})
+    if (MSVC OR WIN32)
+      foreach(TARGET ${MNN_TARGETS})
+        target_compile_definitions(${TARGET} PRIVATE "-DBUILDING_MNN_DLL")
+        target_compile_definitions(${TARGET} INTERFACE "-DUSING_MNN_DLL")
+      endforeach()
+      target_compile_definitions(MNN PRIVATE "-DBUILDING_MNN_DLL")
+      target_compile_definitions(MNN INTERFACE "-DUSING_MNN_DLL")
+    endif()
   ELSE()
     add_library(MNN STATIC ${CMAKE_CURRENT_LIST_DIR}/cmake/dummy.cpp ${MNN_OBJECTS_TO_LINK} ${MNN_PUB_HDRS} ${MNN_EXPR_PUB_HDRS})
   ENDIF()
   target_link_libraries(MNN PUBLIC ${MNN_EXTRA_DEPENDS})
-  if (WIN32)
-    foreach(TARGET ${MNN_TARGETS})
-      target_compile_definitions(${TARGET} PRIVATE "-DBUILDING_MNN_DLL")
-      target_compile_definitions(${TARGET} INTERFACE "-DUSING_MNN_DLL")
-    endforeach()
-    target_compile_definitions(MNN PRIVATE "-DBUILDING_MNN_DLL")
-    target_compile_definitions(MNN INTERFACE "-DUSING_MNN_DLL")
-  endif()
 ENDIF()
+if (MSVC OR WIN32)
+  target_link_options(MNN PRIVATE "/IGNORE:4049,4217")
+endif()
 
 if(APPLE)
     IF(MNN_AAPL_FMWK)
@@ -450,26 +457,21 @@ add_dependencies(MNN MNNCore MNNCV MNNShape MNNMath MNNCompute MNNCPU GenVCSHDR)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/tools/converter)
 
 if(CMAKE_SYSTEM_NAME MATCHES "^Linux")
-  target_link_libraries(MNN PUBLIC pthread)
+# Using -pthread, needed by thread-safe implemention of glibc, is better than only using -lpthread
+# https://stackoverflow.com/questions/23250863/difference-between-pthread-and-lpthread-while-compiling
+  target_link_libraries(MNN PUBLIC -pthread)
 elseif(CMAKE_SYSTEM_NAME MATCHES "^Android")
   target_link_libraries(MNN PUBLIC log android m)
 else()
 endif()
-if (MSVC OR WIN32)
-    target_link_options(MNN PRIVATE "/IGNORE:4049,4217")
-    foreach(DEPEND ${MNN_DEPEND})
-        if (${DEPEND} STREQUAL "MNN")
-            continue()
-        endif()
-        target_link_options(MNN PRIVATE /WHOLEARCHIVE:$<TARGET_FILE:${DEPEND}>)
-        target_link_libraries(MNN PRIVATE ${DEPEND})
-    endforeach()
-endif()
 if (NOT MNN_BUILD_SHARED_LIBS)
     if(APPLE)
-        set(MNN_DEPEND -Wl,-all_load ${MNN_DEPEND} -Wl,-noall_load)
+        set(MNN_DEPS -Wl,-all_load ${MNN_DEPS} -Wl,-noall_load)
     elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-        set(MNN_DEPEND -Wl,--whole-archive ${MNN_DEPEND} -Wl,--no-whole-archive)
+        # Static-link will not replace thread-related weak symbol in glibc with strong symbol 
+        # in pthread library, so we need use --whole-archive to pthread
+        # https://stackoverflow.com/questions/35116327/when-g-static-link-pthread-cause-segmentation-fault-why
+        set(MNN_DEPS -Wl,--whole-archive ${MNN_DEPS} -lpthread -Wl,--no-whole-archive)
     endif()
 endif()
 if (NOT APPLE)
@@ -510,7 +512,6 @@ list(APPEND MNN_TARGETS MNN)
     IF((NOT MSVC) AND (NOT WIN32))
     else()
       target_compile_definitions(${TARGET} PRIVATE _CRT_SECURE_NO_WARNINGS)
-      target_compile_options(${TARGET} PRIVATE "/wd4267" "/wd4018" "/wd4251" "/wd4996" "/wd4244" "/wd4146" "/wd4129" "/wd4305")
     endif()
   ENDFOREACH()
 list(REMOVE_ITEM MNN_TARGETS MNN)
