--- a/tools/converter/CMakeLists.txt
+++ b/tools/converter/CMakeLists.txt
@@ -7,6 +7,9 @@ IF(MNN_BUILD_CONVERTER)
   IF(MNN_PORTABLE_BUILD)
     SET(Protobuf_USE_STATIC_LIBS ON)
   ENDIF()
+  IF(MSVC OR WIN32)
+    set(Protobuf_SRC_ROOT_FOLDER $ENV{Protobuf_SRC_ROOT_FOLDER})
+  endif()
   find_package(Protobuf REQUIRED)
   if (${CMAKE_VERSION} VERSION_LESS "3.6.0")
       set(Protobuf_LIBRARIES ${PROTOBUF_LIBRARIES})
@@ -47,7 +50,15 @@ IF(MNN_BUILD_CONVERTER)
     if(APPLE)
         target_link_libraries(MNNConvert -Wl,-all_load MNNConvertDeps ${MNN_DEPS} -Wl,-noall_load)
     elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-        target_link_libraries(MNNConvert -Wl,--whole-archive MNNConvertDeps ${MNN_DEPS} -Wl,--no-whole-archive)
+        # See also /path/to/MNN/CMakeLists.txt:481 when you are confused with -lpthread here.
+        target_link_libraries(MNNConvert -Wl,--whole-archive MNNConvertDeps ${MNN_DEPS} -lpthread -Wl,--no-whole-archive)
+    elseif (MSVC OR WIN32)
+        target_link_libraries(MNNConvert MNNConvertDeps)
+        target_link_options(MNNConvert PRIVATE /WHOLEARCHIVE:$<TARGET_FILE:MNNConvertDeps>)
+        foreach (DEPEND ${MNN_DEPS})
+            target_link_libraries(MNNConvert ${DEPEND})
+            target_link_options(MNNConvert PRIVATE /WHOLEARCHIVE:$<TARGET_FILE:${DEPEND}>)
+        endforeach ()
     ELSE()
         target_link_libraries(MNNConvert MNNConvertDeps)
     endif()
