--- a/source/backend/cpu/x86_x64/CMakeLists.txt
+++ b/source/backend/cpu/x86_x64/CMakeLists.txt
@@ -11,12 +11,19 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)
     add_library(MNNX8664 OBJECT ${MNN_X8664_SRC})
     add_library(MNNAVX OBJECT ${MNN_AVX_SRC})
     add_library(MNNSSE OBJECT ${MNN_SSE_SRC})
+    if (MNN_FMA_ENABLE)
+        target_compile_definitions(MNNAVX PRIVATE -DMNN_FMA_ENABLE)
+        target_compile_definitions(MNNSSE PRIVATE -DMNN_FMA_ENABLE)
+    endif()
     add_dependencies(MNNX8664 MNNAVX MNNSSE)
     if(WIN32 OR MSVC)
-        target_compile_options(MNNAVX PRIVATE /arch:AVX /wd4267)
+        target_compile_options(MNNAVX PRIVATE /arch:AVX)
     else()
-        target_compile_options(MNNAVX PRIVATE -mavx -mfma)
-        target_compile_options(MNNSSE PRIVATE -mfma)
+        target_compile_options(MNNAVX PRIVATE -mavx)
+        if (MNN_FMA_ENABLE)
+            target_compile_options(MNNAVX PRIVATE -mfma)
+            target_compile_options(MNNSSE PRIVATE -mfma)
+        endif()
     endif()
     if (MNN_OPTIMIZE_INT8_SSE)
         target_compile_options(MNNX8664 PRIVATE -DMNN_OPTIMIZE_INT8_SSE)
