--- a/source/backend/cpu/x86_x64/CMakeLists.txt
+++ b/source/backend/cpu/x86_x64/CMakeLists.txt
@@ -19,6 +19,7 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)
     if(WIN32 OR MSVC)
         target_compile_options(MNNAVX PRIVATE /arch:AVX)
     else()
+        target_compile_options(MNNSSE PRIVATE -msse3)
         target_compile_options(MNNAVX PRIVATE -mavx)
         if (MNN_FMA_ENABLE)
             target_compile_options(MNNAVX PRIVATE -mfma)
