MNN 1.0.0 release sync.
- Added Python Express API implemented with pbind11
- Added demos for Python Express API
- Performance improvements for ARM64, ARMv8.2, x86.
- README update.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,9 +50,9 @@ option(MNN_USE_SYSTEM_LIB "For opencl and vulkan, use system lib or use dlopen" 
 option(MNN_BUILD_HARD "Build -mfloat-abi=hard or not" OFF)
 option(MNN_BUILD_SHARED_LIBS "MNN build shared or static lib" ON)
 option(MNN_FORBID_MULTI_THREAD "Disable Multi Thread" OFF)
-option(MNN_OPENMP "Enable Multiple Thread Linux|Android" ON)
-option(MNN_USE_THREAD_POOL "Use Multiple Thread by Self ThreadPool" ON)
-option(MNN_BUILD_TRAIN "Build Train Tools" OFF)
+option(MNN_OPENMP "Use OpenMP's thread pool implementation. Does not work on iOS or Mac OS" OFF)
+option(MNN_USE_THREAD_POOL "Use MNN's own thread pool implementation" ON)
+option(MNN_BUILD_TRAIN "Build MNN's training framework" OFF)
 option(MNN_BUILD_DEMO "Build demo/exec or not" OFF)
 option(MNN_BUILD_TOOLS "Build tools/cpp or not" ON)
 option(MNN_BUILD_QUANTOOLS "Build Quantized Tools or not" OFF)
@@ -84,13 +84,13 @@ IF(MSVC OR WIN32)
     SET(MNN_SEP_BUILD OFF CACHE BOOL "<docstring>" FORCE)
   ENDIF()
   SET(MNN_USE_SYSTEM_LIB ON CACHE BOOL "<docstring>" FORCE)
-  
+
   # generate optimized (release) exe and library with pdb debug file, https://stackoverflow.com/a/31264946
   SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /DEBUG /OPT:REF /OPT:ICF")
   SET(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG /OPT:REF /OPT:ICF")
   SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /Zi")
   SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi")
-  
+
   SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4267 /wd4018 /wd4251 /wd4996 /wd4244 /wd4146 /wd4129 /wd4305 /wd4275")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4267 /wd4018 /wd4251 /wd4996 /wd4244 /wd4146 /wd4129 /wd4305 /wd4275")
 ENDIF()
@@ -343,6 +343,40 @@ list(APPEND MNN_EXPR_PUB_HDRS "${CMAKE_CURRENT_SOURCE_DIR}/include/MNN/expr/Neur
 list(APPEND MNN_EXPR_PUB_HDRS "${CMAKE_CURRENT_SOURCE_DIR}/include/MNN/expr/Optimizer.hpp")
 list(APPEND MNN_EXPR_PUB_HDRS "${CMAKE_CURRENT_SOURCE_DIR}/include/MNN/expr/Executor.hpp")
 
+if (NOT APPLE)
+  if(MNN_OPENMP)
+      message(STATUS "[*] Checking OpenMP")
+      find_package(OpenMP)
+      # For CMake < 3.9, we need to make the target ourselves
+      if(NOT TARGET OpenMP::OpenMP_CXX)
+          find_package(Threads REQUIRED)
+          add_library(OpenMP::OpenMP_CXX IMPORTED INTERFACE)
+          set_property(TARGET OpenMP::OpenMP_CXX
+              PROPERTY INTERFACE_COMPILE_OPTIONS ${OpenMP_CXX_FLAGS})
+          # Only works if the same flag is passed to the linker; use CMake 3.9+ otherwise (Intel, AppleClang)
+          set_property(TARGET OpenMP::OpenMP_CXX
+              PROPERTY INTERFACE_LINK_LIBRARIES ${OpenMP_CXX_FLAGS} Threads::Threads)
+      endif()
+      # TODO: Don't pollute global CFLAGS
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+      set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${OpenMP_SHARED_LINKER_FLAGS}")
+      set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+      if (WIN32)
+          set(OpenMP_C_FLAGS "/openmp ${OpenMP_C_FLAGS}")
+          set(OpenMP_CXX_FLAGS "/openmp ${OpenMP_CXX_FLAGS}")
+      endif()
+      FOREACH(TARGET ${MNN_TARGETS})
+       target_link_libraries(${TARGET} OpenMP::OpenMP_CXX)
+       IF(WIN32)
+            target_compile_options(${TARGET} PUBLIC /openmp ${OpenMP_CXX_FLAGS} ${OpenMP_C_FLAGS})
+       ELSE()
+           target_compile_options(${TARGET} PUBLIC ${OpenMP_CXX_FLAGS} ${OpenMP_C_FLAGS})
+       ENDIF()
+     ENDFOREACH()
+    endif()
+endif()
+
 set(CMAKE_CXX_FLAGS_ORIGIN ${CMAKE_CXX_FLAGS})
 set(CMAKE_C_FLAGS_ORIGIN ${CMAKE_C_FLAGS})
 if ((NOT (MSVC OR WIN32)) AND MNN_HIDDEN)
@@ -477,7 +511,7 @@ if (NOT MNN_BUILD_SHARED_LIBS)
     if(APPLE)
         set(MNN_DEPS -Wl,-all_load ${MNN_DEPS} -Wl,-noall_load)
     elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-        # Static-link will not replace thread-related weak symbol in glibc with strong symbol 
+        # Static-link will not replace thread-related weak symbol in glibc with strong symbol
         # in pthread library, so we need use --whole-archive to pthread
         # https://stackoverflow.com/questions/35116327/when-g-static-link-pthread-cause-segmentation-fault-why
         if(CMAKE_SYSTEM_NAME MATCHES "^Linux")
@@ -485,39 +519,6 @@ if (NOT MNN_BUILD_SHARED_LIBS)
         else()
             set(MNN_DEPS -Wl,--whole-archive ${MNN_DEPS} -Wl,--no-whole-archive)
         endif()
-    endif()
-endif()
-if (NOT APPLE)
-  if(MNN_OPENMP)
-      message(STATUS "[*] Checking OpenMP")
-      find_package(OpenMP)
-      # For CMake < 3.9, we need to make the target ourselves
-      if(NOT TARGET OpenMP::OpenMP_CXX)
-          find_package(Threads REQUIRED)
-          add_library(OpenMP::OpenMP_CXX IMPORTED INTERFACE)
-          set_property(TARGET OpenMP::OpenMP_CXX
-              PROPERTY INTERFACE_COMPILE_OPTIONS ${OpenMP_CXX_FLAGS})
-          # Only works if the same flag is passed to the linker; use CMake 3.9+ otherwise (Intel, AppleClang)
-          set_property(TARGET OpenMP::OpenMP_CXX
-              PROPERTY INTERFACE_LINK_LIBRARIES ${OpenMP_CXX_FLAGS} Threads::Threads)
-      endif()
-      # TODO: Don't pollute global CFLAGS
-      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-      set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${OpenMP_SHARED_LINKER_FLAGS}")
-      set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-      if (WIN32)
-          set(OpenMP_C_FLAGS "/openmp ${OpenMP_C_FLAGS}")
-          set(OpenMP_CXX_FLAGS "/openmp ${OpenMP_CXX_FLAGS}")
-      endif()
-      FOREACH(TARGET ${MNN_TARGETS})
-       target_link_libraries(${TARGET} OpenMP::OpenMP_CXX)
-       IF(WIN32)
-            target_compile_options(${TARGET} PUBLIC /openmp ${OpenMP_CXX_FLAGS} ${OpenMP_C_FLAGS})
-       ELSE()
-           target_compile_options(${TARGET} PUBLIC ${OpenMP_CXX_FLAGS} ${OpenMP_C_FLAGS})
-       ENDIF()
-     ENDFOREACH()
     endif()
 endif()
 list(APPEND MNN_TARGETS MNN)
