Use ASM MNNMatrixAdd instead of C

--- a/source/backend/cpu/x86_x64/CMakeLists.txt
+++ b/source/backend/cpu/x86_x64/CMakeLists.txt
@@ -6,8 +6,8 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)
     message(STATUS "${CMAKE_SYSTEM_PROCESSOR}: Open SSE")
     add_definitions(-DMNN_USE_SSE)
     FILE(GLOB MNN_X8664_SRC ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
-    FILE(GLOB MNN_AVX_SRC ${CMAKE_CURRENT_LIST_DIR}/avx/*.cpp)
-    FILE(GLOB MNN_SSE_SRC ${CMAKE_CURRENT_LIST_DIR}/sse/*.cpp)
+    FILE(GLOB MNN_AVX_SRC ${CMAKE_CURRENT_LIST_DIR}/avx/*)
+    FILE(GLOB MNN_SSE_SRC ${CMAKE_CURRENT_LIST_DIR}/sse/*)
     add_library(MNNX8664 OBJECT ${MNN_X8664_SRC})
     add_library(MNNAVX OBJECT ${MNN_AVX_SRC})
     add_library(MNNSSE OBJECT ${MNN_SSE_SRC})
