--- a/source/backend/cpu/x86_x64/CMakeLists.txt
+++ b/source/backend/cpu/x86_x64/CMakeLists.txt
@@ -19,8 +19,12 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)
     if(WIN32 OR MSVC)
         target_compile_options(MNNAVX PRIVATE /arch:AVX)
     else()
-        target_compile_options(MNNSSE PRIVATE -msse3 -mfma)
-        target_compile_options(MNNAVX PRIVATE -mavx -mavx512f -mfma -mavx512dq)
+        target_compile_options(MNNSSE PRIVATE -msse3)
+        target_compile_options(MNNAVX PRIVATE -mavx)
+        if (MNN_FMA_ENABLE)
+            target_compile_options(MNNAVX PRIVATE -mfma)
+            target_compile_options(MNNSSE PRIVATE -mfma)
+        endif()
     endif()
     if (MNN_OPTIMIZE_INT8_SSE)
         target_compile_options(MNNX8664 PRIVATE -DMNN_OPTIMIZE_INT8_SSE)
