--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -367,7 +367,6 @@ if (NOT APPLE)
           set(OpenMP_CXX_FLAGS "/openmp ${OpenMP_CXX_FLAGS}")
       endif()
       FOREACH(TARGET ${MNN_TARGETS})
-       target_link_libraries(${TARGET} OpenMP::OpenMP_CXX)
        IF(WIN32)
             target_compile_options(${TARGET} PUBLIC /openmp ${OpenMP_CXX_FLAGS} ${OpenMP_C_FLAGS})
        ELSE()
@@ -498,6 +497,9 @@ if(APPLE)
 endif()
 add_dependencies(MNN MNNCore MNNCV MNNShape MNNMath MNNCompute MNNCPU GenVCSHDR)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/tools/converter)
+if(TARGET OpenMP::OpenMP_CXX)
+    target_link_libraries(MNN PUBLIC OpenMP::OpenMP_CXX)
+endif()
 
 if(CMAKE_SYSTEM_NAME MATCHES "^Linux")
 # Using -pthread, needed by thread-safe implemention of glibc, is better than only using -lpthread
