--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,8 +4,8 @@ IF(MNN_BUILD_TEST)
   else()
     file(GLOB_RECURSE Files ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
   endif()
-  add_executable(run_test.out ${Files})
-  target_link_libraries(run_test.out ${MNN_DEPS})
+  add_executable(run_test.out ${Files} ${MNN_OBJECTS_TO_LINK})
+  target_link_libraries(run_test.out ${MNN_DEPS} )
   target_include_directories(run_test.out PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
   add_dependencies(run_test.out MNN_SCHEMA_GEN)
   if(APPLE)
