add MNN_OPENCL_LWS_TUNE macro

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ option(MNN_SUPPORT_TFLITE_QUAN "Enable MNN's tflite quantized op" ON)
 option(MNN_DEBUG_MEMORY "MNN Debug Memory Access" OFF)
 option(MNN_DEBUG_TENSOR_SIZE "Enable Tensor Size" OFF)
 option(MNN_GPU_TRACE "Enable MNN Gpu Debug" OFF)
+option(MNN_OPENCL_LWS_TUNE "Enable MNN OpenCL Lws Tuning" ON)
 option(MNN_PORTABLE_BUILD "Link the static version of third party libraries where possible to improve the portability of built executables" OFF)
 option(MNN_SEP_BUILD "Build MNN Backends and expression seperately. Only works with MNN_BUILD_SHARED_LIBS=ON" ON)
 option(NATIVE_LIBRARY_OUTPUT "Native Library Path" OFF)
@@ -126,6 +127,9 @@ if(MNN_DEBUG_TENSOR_SIZE)
 endif()
 if(MNN_GPU_TRACE)
     add_definitions(-DMNN_GPU_FORCE_FINISH)
+endif()
+if(MNN_OPENCL_LWS_TUNE)
+    add_definitions(-DMNN_OPENCL_LWS_TUNE)
 endif()
 
 # backend options
