--- a/tools/converter/CMakeLists.txt
+++ b/tools/converter/CMakeLists.txt
@@ -71,6 +71,14 @@ IF(MNN_BUILD_CONVERTER)
         target_link_libraries(MNNConvert MNNConvertDeps)
     endif()
   ELSE()
+    if (MSVC)
+      foreach(TARGET ${MNN_CONVERTER_BACKENDS_TARGETS})
+        target_compile_definitions(${TARGET} PRIVATE "-DMNNConvertDeps_EXPORTS")
+        target_compile_definitions(${TARGET} INTERFACE "-DUSING_MNNConvertDeps")
+      endforeach()
+        target_compile_definitions(MNNConvert PRIVATE "-DUSING_MNNConvertDeps")
+    endif()
+
     target_link_libraries(MNNConvertDeps PUBLIC ${MNN_DEPS} ${Protobuf_LIBRARIES})
     add_executable(TestConvertResult ${CMAKE_CURRENT_LIST_DIR}/source/TestConvertResult.cpp)
     target_link_libraries(TestConvertResult MNNConvertDeps)
