--- a/source/backend/cpu/x86_x64/CMakeLists.txt
+++ b/source/backend/cpu/x86_x64/CMakeLists.txt
@@ -19,7 +19,7 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)
     if(MSVC)
         target_compile_options(MNNAVX PRIVATE /arch:AVX)
     else()
-        target_compile_options(MNNSSE PRIVATE -msse4.1 -mfma)
+        target_compile_options(MNNSSE PRIVATE -msse4.1)
         target_compile_options(MNNAVX PRIVATE -mavx2 -mfma -DMNN_X86_USE_ASM)
         target_compile_options(MNNX8664 PRIVATE -msse4.1 -DMNN_X86_USE_ASM)
     endif()
