--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ option(MNN_WIN_RUNTIME_MT "MNN use /MT on Windows dll" OFF)
 option(MNN_FORBID_MULTI_THREAD "Disable Multi Thread" OFF)
 option(MNN_OPENMP "Use OpenMP's thread pool implementation. Does not work on iOS or Mac OS" OFF)
 option(MNN_USE_THREAD_POOL "Use MNN's own thread pool implementation" ON)
+option(MNN_USE_DYNAMIC_WORK_INDEX "Only assign a dynamic work index to a session during running" OFF)
 option(MNN_BUILD_TRAIN "Build MNN's training framework" OFF)
 option(MNN_BUILD_DEMO "Build demo/exec or not" OFF)
 option(MNN_BUILD_TOOLS "Build tools/cpp or not" ON)
@@ -112,6 +113,9 @@ ENDIF()
 if (MNN_USE_THREAD_POOL)
     set(MNN_OPENMP OFF)
     add_definitions(-DMNN_USE_THREAD_POOL)
+    if (MNN_USE_DYNAMIC_WORK_INDEX)
+        add_definitions(-DMNN_USE_DYNAMIC_WORK_INDEX)
+    endif()
 endif()
 
 if(MNN_FORBID_MULTI_THREAD)
