--- a/tools/quantization/preprocessConfig.json
+++ b/tools/quantization/preprocessConfig.json
@@ -15,5 +15,8 @@
     "path":"path/to/images/",
     "used_image_num":500,
     "feature_quantize_method":"KL",
-    "weight_quantize_method":"MAX_ABS"
+    "weight_quantize_method":"MAX_ABS",
+    "skip_quant_op_names":[
+        "skip_quant_op_name1", "skip_quant_op_name2"
+    ]
 }
