--- a/tools/quantization/preprocessConfig.json
+++ b/tools/quantization/preprocessConfig.json
@@ -16,6 +16,8 @@
     "used_image_num":500,
     "feature_quantize_method":"KL",
     "weight_quantize_method":"MAX_ABS",
+    "feature_clamp_value":127,
+    "weight_clamp_value":127,
     "skip_quant_op_names":[
         "skip_quant_op_name1", "skip_quant_op_name2"
     ]
