[PATCH 10/19] [Quantization:Feature] add debug, and bugfix in compute distance

--- a/tools/quantization/preprocessConfig.json
+++ b/tools/quantization/preprocessConfig.json
@@ -20,5 +20,6 @@
     "weight_clamp_value":127,
     "skip_quant_op_names":[
         "skip_quant_op_name1", "skip_quant_op_name2"
-    ]
+    ],
+    "debug":false
 }
